@@ -1,5 +1,7 @@
 2008-10-06  Michael Snyder  <msnyder@vmware.com>
 
+	* remote.c (remote_get_exec_direction): Use i18n macros.
+	(remote_set_exec_direction): Ditto.
 	* infrun.c (handle_inferior_event, step_into_function): Formatting.
         * infrun.c (handle_inferior_event): Formatting, spelling fix.
 
